--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,9 +20,9 @@
           <a href="work.html">work</a>
         </nav>
     <table border="1"> 
-        <th> university</th>
-        <th>date</th>
-        <th>specialite</th>
+        <th class="university"> university</th>
+        <th class="date">date</th>
+        <th class="specialite">specialite</th>
         <tr>
         </tr>
         <td>bac</td>
