--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>portfolio</title>
 </head>
 <body>
@@ -12,16 +13,16 @@
       <div>
         <h2> Portfolio </h2>
       </div>
-      <a href="about1.html">about</a>
+      <a href="about1.html" >about</a>
       <a href="home.html">home</a>
       <a href="contact.html">contact</a>
       <a href="resume.html">resume</a>
       <a href="work.html">work</a>
     </nav>
     <div>
-      <p> i am manai amira </p>
+      <p class="paragraph"> i am manai amira </p>
     </div>
-    <img src="https://www.shutterstock.com/image-photo/childrens-fashion-cute-seven-year-260nw-1130730539.jpg" alt="profile" width="300px" height="300">
+    <img src="https://www.shutterstock.com/image-photo/childrens-fashion-cute-seven-year-260nw-1130730539.jpg" alt="profile" width="600px" height="500px">
 
 <p>skills</p>
 <ul>
@@ -30,10 +31,10 @@
 <li>Financial reporting</li>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/IiuSMEzEdcI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <footer>
-  <dt> work in shool tache admistratif</dt>
-  <dd>in 2018</dd>
+  <dt > work in shool tache admistratif</dt>
+  <dd class="order">in 2018</dd>
   <dt> formation full stack </dt>
-  <dd>in 2022</dd>
+  <dd class="order1">in 2022</dd>
 </footer>
     
     
